<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".GPA_Calculator"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/tv4"
            app:layout_constraintStart_toStartOf="@+id/tv4">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/tv_1"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="64dp"
                android:gravity="start"
                android:text="@string/tv_2"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"

                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/tv_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/ed6"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <EditText
                android:id="@+id/ed1"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:hint="@string/enter_a_number1"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <EditText
                android:id="@+id/ed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number2"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintStart_toStartOf="@+id/ed1"
                app:layout_constraintTop_toBottomOf="@+id/ed1" />

            <EditText
                android:id="@+id/ed3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/enter_a_number3"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintStart_toStartOf="@+id/ed2"
                app:layout_constraintTop_toBottomOf="@+id/ed2" />

            <EditText
                android:id="@+id/ed4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number4"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintStart_toStartOf="@+id/ed3"
                app:layout_constraintTop_toBottomOf="@+id/ed3" />

            <EditText
                android:id="@+id/ed5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number5"
                android:inputType="number"
                android:maxLength="1"
                app:layout_constraintStart_toStartOf="@+id/ed4"
                app:layout_constraintTop_toBottomOf="@+id/ed4" />


            <EditText
                android:id="@+id/ed6"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginLeft="212dp"
                android:layout_marginStart="212dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_a_number6"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintBottom_toBottomOf="@+id/ed1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv3" />

            <EditText
                android:id="@+id/ed7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number7"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintStart_toStartOf="@+id/ed6"
                app:layout_constraintTop_toBottomOf="@+id/ed6" />

            <EditText
                android:id="@+id/ed8"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:hint="@string/enter_a_number8"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintStart_toStartOf="@+id/ed7"
                app:layout_constraintTop_toBottomOf="@+id/ed7" />

            <EditText
                android:id="@+id/ed9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number9"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintStart_toStartOf="@+id/ed8"
                app:layout_constraintTop_toBottomOf="@+id/ed8" />

            <EditText
                android:id="@+id/ed10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number10"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintStart_toStartOf="@+id/ed9"
                app:layout_constraintTop_toBottomOf="@+id/ed9" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed10" />

            <Button
                android:id="@+id/clear"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/btn_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.707"
                app:layout_constraintRight_toRightOf="@+id/btn_submit"
                app:layout_constraintStart_toEndOf="@+id/btn_submit"
                app:layout_constraintTop_toBottomOf="@+id/ed10" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>